--- a/src/features/home/index.css
+++ b/src/features/home/index.css
@@ -16,7 +16,8 @@
 }
 
 .headerIndex {
-    width: 1920px;
+    /*width: 1920px;*/
+    width:100%;
     height: 920px;
     position: relative;
     background: #38405e;
@@ -31,11 +32,22 @@
     flex-direction: row;
     justify-content: center;
 }
+.centerNavHe{
+   justify-items: right;
+   justify-content: right;
+    flex-direction: row-reverse;
+}
+
+.hebMenu{
+    display: flex;
+    flex-direction: row-reverse;
+}
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: inline;
     overflow: hidden;
 }
 
@@ -43,7 +55,7 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 6px 8px;
     text-decoration: none;
 }
 
@@ -71,6 +83,8 @@ a {
     text-decoration: none;
     text-transform: uppercase;
 }
+
+
 
 .loginButton {
     margin-left: 40px;
@@ -105,6 +119,13 @@ a {
     text-align: center;
     color: #f8a12a;
     border-color: #f8a12a;
+}
+
+#section1 {
+    /* padding-top: 50px !important; */
+    margin-bottom: 10px;
+    /* margin-top: 50px !important; */
+    behavior: "smooth"
 }
 
 .whoWeAreHeader {
@@ -160,8 +181,141 @@ a {
     letter-spacing: normal;
 }
 
+.hebrewDiraction{
+    flex-direction: row-reverse;
+}
+
+.rtlText{
+    text-align: right;
+    direction:rtl;
+}
+
 .whoWeAreItemText {
     font-size: 16px;
+}
+.appLinks{
+    width: 80%;
+    text-align: center;
+    margin-bottom: 100px;
+    margin: 100px auto;
+}
+
+@media only screen and (max-width: 1400px) {
+   .appLinks{
+       margin-top: 5px;
+       width: 100%;
+   }
+}
+
+/* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
+.icon-bar {
+    position: fixed;
+    top: 100%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%);
+    background-color: #38405e;
+    width: 400px;
+    height: 60px;
+  }
+/* Style the social media icons with color, if you want */
+.icon-bar a:hover {
+    background-color: #e4e4e451;
+  }
+
+  /* Style the icon bar links */
+.icon-bar a {
+    /* display: block; */
+    text-align: center;
+    padding: 14px;
+    transition: all 0.3s ease;
+     color: white;
+    font-size: 20px; 
+  }
+
+.getAppButton{
+    width: 20%;
+    height: 100%;
+}
+
+.socialIcon{
+    width: 10%;
+    margin: 2.5% 1%;
+}
+
+
+@media only screen and (max-width: 600px) {
+    
+    .getAppButton{
+        width: 110px;
+        height: 55px;
+    }
+
+    .socialIcon{
+        width: 35px;
+    }
+}
+
+/* Responsive  */
+
+@media only screen and (max-width: 600px) {
+    .bigLogo{
+        width: 90%;
+    }
+    .headerIndex {
+        /*width: 1920px;*/
+        width:100%;
+        height: 500px;
+        position: relative;
+        background: #38405e;
+        text-align: center;
+        overflow: hidden;
+        padding-top: 12px;
+        background-image: url("../../images/waveBG.svg");
+    }
+
+    #section1 {
+      display: flex;
+      flex-direction: column;
+      flex-flow: column;
+      margin-bottom: 10px;
+      width: 100%;
+    }
+    .whoWeAreHeader{
+        width: 93%;
+    }
+
+    .whoWeAreHeaderBig{
+        width: 93%;
+
+    }
+    .whoWeAreHeaderSmall{
+        width: 93%;
+    }
+    .whoWeAre {  
+        flex-direction: column;
+        margin: auto;
+        text-align: center;
+    }
+    .whoWeAreItem {
+        width:90%;
+        margin-left: 1px;
+        margin-right: 1px;
+        margin: auto;
+        padding: 5%;
+    }
+    .whoWeAreItemHeader{
+        margin-bottom: 4%;
+    }
+
+  }
+
+
+  #section2 {
+    width: 1920px;
+    height: 704px;
+    background-color: #f8f8f5;
+    padding-top: 80px;
 }
 
 .carouselPic {
@@ -176,7 +330,8 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    width: 980px;
+    /* width: 980px; */
+    justify-items: center;
     margin-top: 107;
 }
 
@@ -190,7 +345,7 @@ a {
     font-style: normal;
     line-height: normal;
     letter-spacing: normal;
-    text-align: left;
+    /* text-align: left; */
     color: #848484;
     margin-bottom: 25px;
 }
@@ -209,7 +364,7 @@ a {
     font-style: normal;
     line-height: 1.35;
     letter-spacing: normal;
-    text-align: left;
+   /*  text-align: left; */
     color: #ff9900;
 }
 
@@ -223,37 +378,97 @@ a {
     font-style: normal;
     line-height: 1.63;
     letter-spacing: normal;
-    text-align: left;
+    /* text-align: left; */
     color: #2c2e30;
 }
 
 .carousel {
-    width: 980px !important;
+    /* width: 980px !important; */
+    width: 80%;
 }
 
 .theCarousel {
     margin: auto;
-    width: 50%;
+width: 100%; 
+   display: flex;
+   flex-direction: row;
+   justify-content: space-evenly;
+   /* width: 980px; */
+   justify-items: center;
     padding-top: 107px !important;
+}
+
+/* Responsive  */
+
+@media
+ only screen and (max-width: 600px) {
+    #section2{
+        padding-top: 5px;
+        width: 100%;
+        padding: 15px;
+    }
+    .theCarousel {
+       margin: auto;
+       width: 100%; 
+       display: flex;
+       flex-direction: column-reverse;;
+       justify-content: space-evenly;
+       /* width: 980px; */
+       justify-items: center;
+        padding-top: 40px !important;
+        height: 1100px;  
+    }
+    .carouselItem {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-evenly;
+        /* width: 980px; */
+        justify-items: center;
+        margin-top: 1px;
+    }
+    .hiwSmallTitle{
+     padding-bottom: 10px;   
+    }
+    .caroulelContext{
+        /* width: 350px; */
+        width: 100%;
+        text-align: left;
+        margin: 15px;
+
+    }
+    .hiwSmallTitle{
+        margin: auto;
+    }
+    .carouselHeder{
+        /* width: 350px; */
+        width: 93%;
+        text-align: center;
+    }
+
+    .carouselText{
+        width: 93%;
+        text-align: center;
+        height: 100px;
+        padding:1.5%;
+    }
+    .carouselPic{
+        width: 93%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .carouselImg{
+        height: 670px;
+    }
+
 }
 
 html {
     scroll-behavior: smooth;
 }
 
-#section1 {
-    padding-top: 50px !important;
-    margin-bottom: 150px;
-    margin-top: 50px !important;
-    behavior: "smooth"
-}
 
-#section2 {
-    width: 1920px;
-    height: 704px;
-    background-color: #f8f8f5;
-    padding-top: 80px;
-}
+
+
 
 #section3 {
     margin-top: 350px;
@@ -301,6 +516,43 @@ html {
     text-align: center;
     color: white;
 }
+@media
+ only screen and (max-width: 600px) {
+    #section3{
+        width: 100%;
+        max-width: 600px;
+        margin: 300px auto auto;
+        padding: 15px;
+        height: 550px;
+        /* width: 370px;
+        height: 599px;
+        margin-bottom: 1px; */
+    }
+    .guideSection {
+        display: flex;
+        flex-direction: column;
+    }
+    .guideSelectionPic{
+        display:none;
+        display: none;
+        
+    }
+
+    .guideLogo{
+        width: 93%;
+
+    }
+
+    .guideSectionContext{
+        width: 93%;
+        text-align: center;
+        margin: 3%;
+    }
+
+    .guideSectionButton{
+        margin-left: 4px;
+    }
+}
 
 #section4 {
     margin-top: 80px;
@@ -327,6 +579,41 @@ html {
 
 .businessImg {
     margin-right: 80px;
+}
+
+@media
+ only screen and (max-width: 600px) {
+    #section4{
+        width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 15px;
+    }
+    .businessSection {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .businessImg{
+        display:none;
+        display: none;
+        
+    }
+
+    .businessLogo{
+        width: 93%;
+
+    }
+
+    .businessContext{
+        width: 93%;
+        text-align: center;
+        margin: 2%;
+    }
+
+    .guideSectionButton{
+        margin-left: 4px;
+    }
 }
 
 .faqHeader {
@@ -399,6 +686,8 @@ html {
     opacity: 1;
 }
 
+
+
 .footerIndex {
     display: flex;
     justify-content: center;
@@ -446,6 +735,19 @@ html {
     padding-left: 25px;
 }
 
+@media
+ only screen and (max-width: 600px) {
+    .footerIndex{
+        width: 100%;
+    }
+    .contact-form{
+        margin: auto;
+    }
+    .contactButton{
+        margin: auto;
+    }
+ }
+
 .press {
     display: table;
     /* Required for table-cell to work on li's */
@@ -465,6 +767,10 @@ html {
     text-align: center;
     /* Centre align the images */
 }
+.smallLogo{
+    width: 70px;
+    height: 100px;
+}
 
 @media (max-width: 960px) and (min-width: 501px) {
     .press li {
@@ -478,6 +784,16 @@ html {
         width: 100%;
     }
     /* On small screens, show one logo per row */
+    .loginButton {
+       display: none;
+    }
+    .registerButton{
+        display: none;
+    }
+    .smallLogo{
+        display: none;
+    }
+
 }
 
 @media (max-width: 960px) {
@@ -488,3 +804,39 @@ html {
         display: inline-block;
     }
 }
+
+.ui.tabular.menu .item {
+    width: 23.5%;
+font-size: 14px;
+}
+
+.langSelection{
+    width: 140px;
+    height: 45px;
+    margin: 1px 0 0;
+    padding: 9px 5px 18px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 200px;
+}
+
+.Lang{
+    width: 78px;
+    height: 18px;
+    font-family: PloniDL1.1AAA;
+    font-size: 18px;  
+    font-weight: bold;  
+    font-stretch: normal;
+ 
+    font-style: normal;
+  
+    line-height: 1;
+  
+    letter-spacing: 0.51px;
+  
+    text-align: right;
+  
+    color: #ffffff;
+}
+
