--- a/src/style/mainNavBar.css
+++ b/src/style/mainNavBar.css
@@ -14,6 +14,7 @@
 
 .menuText {
     text-align: left;
+    width: 3%;
 }
 
 .menuName {
@@ -31,7 +32,7 @@
 }
 
 .menuEmail {
-    width: 134px;
+    width: 80px;
     height: 35px;
     font-family: PloniDL1.1AAA;
     font-size: 16px;
