--- a/src/style/stopCreation.css
+++ b/src/style/stopCreation.css
@@ -8,8 +8,12 @@
 
 .allLocationForm {
   margin: 3%;
-  height: 64vh;
+  height: 76vh;
   width: 32vw;
+}
+
+.saveNcancleButton{
+  margin-top: 28%;
 }
 
 .allCreation {
@@ -109,11 +113,16 @@
   color: #ff6008;
 }
 
+.diractionArea{
+  margin-top: 3%;
+}
+
 .locationFooter {
   display: flex;
   align-items: left;
   flex-direction: row;
   justify-content: left;
+  margin: 6% 0 8% 0;
 }
 
 .cordInput {
@@ -126,4 +135,39 @@
 .saveButton {
   margin-top: 30px;
   cursor: pointer;
+}
+
+.locPicArea{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  object-fit: contain;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
+  background-color: #ffffff;
+}
+
+.latLngArea{
+  display: flex;
+  flex-direction: row;
+}
+
+.locationButtons{
+  margin: 45px 0 0 25px;
+}
+
+.saveLocationButton{
+  width: 160px;
+  height: 46px;
+  border-radius: 24px;
+  background-color: #bdee4a;
+  object-fit: contain;
+  color: #6e6d71;
+}
+
+.cancleLocationButton{
+  width: 160px;
+  height: 46px;
+  border-radius: 24px;
+  background-color: #ff8738;
+  object-fit: contain;
+  color: #e6e6e6;
 }
