--- a/src/style/stopCreation.css
+++ b/src/style/stopCreation.css
@@ -19,13 +19,18 @@
 .allCreation {
   margin: 3%;
   width: 36vw;
+  width: 100%;
 }
 
 .locationInput {
   width: 508px;
+  width: 100%;
   height: 55px;
   border-radius: 3px !important;
   background-color: #f6f6f6 !important;
+}
+.smallNameInput {
+  margin-bottom: 80px;
 }
 
 .inputLocationHeader {
